# servicesRH

./: Makefile.am  Makefile.in  Services.sln  config.h.in  configure  configure.ac  ejemplo.conf  example.conf
Nucleo/: CCallback.h  CChannel.cpp  CChannel.h  CChannelManager.cpp  CChannelManager.h  CChanserv.cpp  CChanserv.h  CClient.cpp  CClient.h  CClientManager.cpp  CClientManager.h  CConfig.cpp  CConfig.h  CDBStatement.cpp  CDBStatement.h  CDatabase.cpp  CDatabase.h  CDate.cpp  CDate.h  CDelayedDeletionElement.h  CDirectory.h  CDirectory_posix.cpp  CDirectory_posix.h  CDirectory_win32.cpp  CDirectory_win32.h  CIpserv.cpp  CIpserv.h  CLanguage.cpp  CLanguage.h  CLanguageManager.cpp  CLanguageManager.h  CLocalUser.cpp  CLocalUser.h  CLogger.cpp  CLogger.h  CMembership.cpp  CMembership.h  CMemoserv.cpp  CMemoserv.h  CMessage.cpp  (+41 more)
Nucleo/google/sparsehash/: configure
Nucleo/google/sparsehash/.svn/: all-wcprops  entries
Nucleo/google/sparsehash/doc/.svn/: all-wcprops  entries
Nucleo/google/sparsehash/experimental/.svn/: all-wcprops  entries
Nucleo/google/sparsehash/m4/.svn/: all-wcprops  entries
Nucleo/google/sparsehash/src/.svn/: all-wcprops  entries
Nucleo/google/sparsehash/src/google/.svn/: all-wcprops  entries
Nucleo/google/sparsehash/src/sparsehash/.svn/: all-wcprops  entries
Nucleo/google/sparsehash/src/windows/.svn/: all-wcprops  entries
Nucleo/google/sparsehash/vsprojects/.svn/: all-wcprops  entries
Nucleo/google/sparsehash/vsprojects/hashtable_test/.svn/: entries  (+1 more)
Nucleo/mysql/include/: mysql_version.h
Nucleo/mysql/lib/debug/: libmysql.lib
(+39 files in other folders)
